conf/gke-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imageproxy
  labels:
    app: imageproxy
  annotations:
    service.beta.kubernetes.io/external-traffic: "OnlyLocal"
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: imageproxy
